Add Android Studio 2.2.1 Link

--- a/index.html
+++ b/index.html
@@ -290,7 +290,47 @@
                             </tr>
                         </thead>
                         <tbody>
-                            <!-- 2.1.2 正式版 -->
+                            <!-- 2.2.1-->
+                            <tr>
+                              <td rowspan="6">2.2.1</td>
+                                </tr>
+                            <tr>
+                              <td rowspan="3">Windows</td>
+                              <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/install/2.2.1.0/android-studio-bundle-145.3330264-windows.exe">android-studio-bundle-145.3330264-windows.exe</a><br>(推荐)
+                              </td>
+                              <td>1633 MB</td>
+                              <td>09c8efe515452758acc87d44b20810e6924c4593</td>
+                              <td rowspan="6"><a href="http://ww2.sinaimg.cn/large/006y8mN6jw1f8vgpgfa3uj30vx0ksdii.jpg">查看</a></td>
+                            </tr>
+                            <tr>
+                              <td align="left"><a href="https://dl.google.com/dl/android/studio/install/2.2.1.0/android-studio-ide-145.3330264-windows.exe">android-studio-ide-145.3330264-windows.exe</a><br>(不含SDK Tools)
+                              </td>
+                              <td>415 MB</td>
+                              <td>dc4649a1efb2fb8f8f79a254b9a62e2ee274a385</td>
+                            </tr>
+                            <tr>
+                              <td align="left"><a href="https://dl.google.com/dl/android/studio/ide-zips/2.2.1.0/android-studio-ide-145.3330264-windows.zip">android-studio-ide-145.3330264-windows.zip</a></td>
+                              <td>437 MB</td>
+                              <td>d2286df0d1c23b06ea96b82fe7ecfe865b1c6f03</td>
+                            </tr>
+                            <tr>
+                              <td ><nobr>Mac OS X</nobr></td>
+                              <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/install/2.2.1.0/android-studio-ide-145.3330264-mac.dmg">android-studio-ide-145.3330264-mac.dmg</a>
+                              </td>
+                              <td>432 MB</td>
+                              <td>b549b276bd11e8cd42170dc1cb9c2357a5900c16</td>
+                            </tr>
+                            <tr>
+                              <td>Linux</td>
+                              <td align="left">
+                                        <a href="https://dl.google.com/dl/android/studio/ide-zips/2.2.1.0/android-studio-ide-145.3330264-linux.zip">android-studio-ide-145.3330264-linux.zip</a>
+                              </td>
+                              <td>436 MB</td>
+                              <td>1afb54c3ba7716246ef2cd248bdddd248d1442d4</td>
+                            </tr>
+                            <!-- 2.2 正式版 -->
                             <tr>
                               <td rowspan="6">2.2 正式版</td>
                                 </tr>
@@ -329,114 +369,6 @@
                               </td>
                               <td>428 MB</td>
                               <td>4eec979ad4d216fd591ebe0112367c746cedb114</td>
-                            </tr>
-                            <!-- 2.2 RC2 -->
-                            <tr>
-                              <td rowspan="4">2.2 RC2</td>
-                                </tr>
-                            <tr>
-                              <td >Windows</td>
-                              <td align="left"><a href="https://dl.google.com/dl/android/studio/ide-zips/2.2.0.11/android-studio-ide-145.3253452-windows.zip">android-studio-ide-145.3253452-windows.zip</a></td>
-                              <td>466.2 MB</td>
-                              <td>086fa185e2e8c155909589a95c85578ee1bc7465</td>
-                              <td rowspan="4"><a href="http://ww1.sinaimg.cn/large/801b780agw1f7ncfqd3jdj20q40mktfl.jpg">查看</a></td>
-                            </tr>
-                            <tr>
-                              <td><nobr>Mac OS X</nobr></td>
-                              <td align="left">
-                                        <a href="https://dl.google.com/dl/android/studio/ide-zips/2.2.0.11/android-studio-ide-145.3253452-mac.zip">android-studio-ide-145.3253452-mac.zip</a>
-                              </td>
-                              <td>466.7 MB</td>
-                              <td>2d98d35ae277c5cb16484193f4e8beb9cd7623d5</td>
-                            </tr>
-                            <tr>
-                              <td>Linux</td>
-                              <td align="left">
-                                        <a href="https://dl.google.com/dl/android/studio/ide-zips/2.2.0.11/android-studio-ide-145.3253452-linux.zip">android-studio-ide-145.3253452-linux.zip</a>
-                              </td>
-                              <td>466.7 MB</td>
-                              <td>38046857e008d059ca1a1655dc4f4d2250bbc157</td>
-                            </tr>
-                            <!-- 2.2 RC -->
-                            <tr>
-                              <td rowspan="4">2.2 RC</td>
-                                </tr>
-                            <tr>
-                              <td >Windows</td>
-                              <td align="left"><a href="https://dl.google.com/dl/android/studio/ide-zips/2.2.0.10/android-studio-ide-145.3240973-windows.zip">android-studio-ide-145.3240973-windows.zip</a></td>
-                              <td>466.2 MB</td>
-                              <td>f4180ff3d0afb949165f8ced62c3202914125293</td>
-                              <td rowspan="4"><a href="http://ww3.sinaimg.cn/large/8a41f469gw1f7bih8ndefj21e812cgvq.jpg">查看</a></td>
-                            </tr>
-                            <tr>
-                              <td><nobr>Mac OS X</nobr></td>
-                              <td align="left">
-                                        <a href="https://dl.google.com/dl/android/studio/ide-zips/2.2.0.10/android-studio-ide-145.3240973-mac.zip">android-studio-ide-145.3240973-mac.zip</a>
-                              </td>
-                              <td>466.7 MB</td>
-                              <td>9ea687645dc8a2f2a1dc0734a571a23fac6c54a2</td>
-                            </tr>
-                            <tr>
-                              <td>Linux</td>
-                              <td align="left">
-                                        <a href="https://dl.google.com/dl/android/studio/ide-zips/2.2.0.10/android-studio-ide-145.3240973-linux.zip">android-studio-ide-145.3240973-linux.zip</a>
-                              </td>
-                              <td>466.7 MB</td>
-                              <td>bfed1c30a3727ec5ccb2c72424ce5f34d1228a52</td>
-                            </tr>
-                            <!-- 2.2 beta3 -->
-                            <tr>
-                              <td rowspan="4">2.2 Beta3</td>
-                                </tr>
-                            <tr>
-                              <td >Windows</td>
-                              <td align="left"><a href="https://dl.google.com/dl/android/studio/ide-zips/2.2.0.9/android-studio-ide-145.3225885-windows.zip">android-studio-ide-145.3225885-windows.zip</a></td>
-                              <td>466.2 MB</td>
-                              <td>9edeb777aa61b9108f7163fcc948a8529214ef2c</td>
-                              <td rowspan="4"><a href="http://ww3.sinaimg.cn/large/8a41f469gw1f7bih8ndefj21e812cgvq.jpg">查看</a></td>
-                            </tr>
-                            <tr>
-                              <td><nobr>Mac OS X</nobr></td>
-                              <td align="left">
-                                        <a href="https://dl.google.com/dl/android/studio/ide-zips/2.2.0.9/android-studio-ide-145.3225885-mac.zip">android-studio-ide-145.3225885-mac.zip</a>
-                              </td>
-                              <td>466.7 MB</td>
-                              <td>99f0ef3c1ae8d3a344be0d708c1a33f86c3a6c38</td>
-                            </tr>
-                            <tr>
-                              <td>Linux</td>
-                              <td align="left">
-                                        <a href="https://dl.google.com/dl/android/studio/ide-zips/2.2.0.9/android-studio-ide-145.3225885-linux.zip">android-studio-ide-145.3225885-linux.zip</a>
-                              </td>
-                              <td>466.7 MB</td>
-                              <td>77a5291a921a7399f0b014fad55d6684af29b969</td>
-                            </tr>
-                            <!-- 2.2 beta2 -->
-                            <tr>
-                              <td rowspan="4">2.2 Beta2</td>
-                                </tr>
-                            <tr>
-                              <td >Windows</td>
-                              <td align="left"><a href="https://dl.google.com/dl/android/studio/ide-zips/2.2.0.8/android-studio-ide-145.3200535-windows.zip">android-studio-ide-145.3200535-windows.zip</a></td>
-                              <td>461.5 MB</td>
-                              <td>d962191dcb2ee935e80193ebaaca929877859dd2</td>
-                              <td rowspan="4"><a href="http://ww2.sinaimg.cn/large/8a41f469gw1f71hy3271wj21hl13wtug.jpg">查看</a></td>
-                            </tr>
-                            <tr>
-                              <td><nobr>Mac OS X</nobr></td>
-                              <td align="left">
-                                        <a href="https://dl.google.com/dl/android/studio/ide-zips/2.2.0.8/android-studio-ide-145.3200535-mac.zip">android-studio-ide-145.3200535-mac.zip</a>
-                              </td>
-                              <td>462.1 MB</td>
-                              <td>89c86afa43715f47c78aed5df69e05f1bd3444c4</td>
-                            </tr>
-                            <tr>
-                              <td>Linux</td>
-                              <td align="left">
-                                        <a href="https://dl.google.com/dl/android/studio/ide-zips/2.2.0.8/android-studio-ide-145.3200535-linux.zip">android-studio-ide-145.3200535-linux.zip</a>
-                              </td>
-                              <td>461.2 MB</td>
-                              <td>7064f43efde8b0f4fe12b9ed20eb05de87c24d41</td>
                             </tr>
                             <!-- 2.1.3 正式版 -->
                             <tr>
@@ -481,57 +413,6 @@
                               <td>273.4 MB</td>
                               <td>8729e6f2f1fa58f04df9f8d1caac2f5be9dfc549</td>
                             </tr>
-                             <!-- 2.2 beta -->
-                             <tr>
-                               <td rowspan="4">2.2 Beta</td>
-                                 </tr>
-                             <tr>
-                               <td >Windows</td>
-                               <td align="left"><a href="https://dl.google.com/dl/android/studio/ide-zips/2.2.0.7/android-studio-ide-145.3128856-windows.zip">android-studio-ide-145.3128856-windows.zip</a></td>
-                               <td>465.1 MB</td>
-                               <td>7d2c9861e90dc985b1e6ba78ebd8497b610a8620</td>
-                               <td rowspan="4"><a href="http://ww1.sinaimg.cn/large/8a41f469gw1f6ve698vw9j21ih1304jw.jpg">查看</a></td>
-                             </tr>
-                             <tr>
-                               <td><nobr>Mac OS X</nobr></td>
-                               <td align="left">
-                                         <a href="https://dl.google.com/dl/android/studio/ide-zips/2.2.0.7/android-studio-ide-145.3128856-mac.zip">android-studio-ide-145.3128856-mac.zip</a>
-                               </td>
-                               <td>462.1 MB</td>
-                               <td>050a443ffee51922eabddbcd260c845a8e06e4a9</td>
-                             </tr>
-                             <tr>
-                               <td>Linux</td>
-                               <td align="left">
-                                         <a href="https://dl.google.com/dl/android/studio/ide-zips/2.2.0.7/android-studio-ide-145.3128856-linux.zip">android-studio-ide-145.3128856-linux.zip</a>
-                               </td>
-                               <td>461.2 MB</td>
-                               <td>bafb5d7029d2678e8274e24da1c7ce0a00f3a644</td>
-                             </tr>
-                            <!-- 2.2 Preview7 -->
-                            <tr>
-                              <td rowspan="4">2.2 Preview7</td>
-                            </tr>
-                            <tr>
-                              <td >Windows</td>
-                              <td align="left"><a href="https://dl.google.com/dl/android/studio/ide-zips/2.2.0.6/android-studio-ide-145.3111935-windows.zip">android-studio-ide-145.3111935-windows.zip</a></td>
-                              <td>457.4 MB</td>
-                              <td>e6ea4c9d9bf4ae46dbea82e3cc5638fd93194c33</td>
-                              <td rowspan="4"><a href="http://ww3.sinaimg.cn/large/8a41f469gw1f6iopbz2e6j20rm0i0ahj.jpg">查看</a></td>
-                            </tr>
-                            <tr>
-                              <td><nobr>Mac OS X</nobr></td>
-                              <td align="left"><a href="https://dl.google.com/dl/android/studio/ide-zips/2.2.0.6/android-studio-ide-145.3111935-mac.zip">android-studio-ide-145.3111935-mac.zip</a></td>
-                              <td>457.9 MB</td>
-                              <td>56327a0f97d999a6b7a15f3e9e513aa42881c989</td>
-                            </tr>
-                            <tr>
-                              <td>Linux</td>
-                              <td align="left"><a href="https://dl.google.com/dl/android/studio/ide-zips/2.2.0.6/android-studio-ide-145.3111935-linux.zip">android-studio-ide-145.3111935-linux.zip</a></td>
-                              <td>447.1 MB</td>
-                              <td>b85c4e27401f7f18af19e39e453cca8575041dbb</td>
-                            </tr>
-
                             <!-- 2.1.2 正式版 -->
                             <tr>
                               <td rowspan="6">2.1.2 正式版</td>
