Add donate info

--- a/donate.html
+++ b/donate.html
@@ -1567,8 +1567,8 @@
                             <tr>
                                 <td>晔</td>
                                 <td>¥10.24</td>
-                                <td></td>
-                                <td>¥</td>
+                                <td>sub-bucket</td>
+                                <td>¥6.66</td>
                                 <td>捐赠来自微信</td>
                                 <td>¥</td>
                                 <td>捐赠来自微信</td>
