Added Android Studio 2.2.2 Link

--- a/index.html
+++ b/index.html
@@ -290,6 +290,46 @@
                             </tr>
                         </thead>
                         <tbody>
+                            <!-- 2.2.2-->
+                            <tr>
+                              <td rowspan="6">2.2.2</td>
+                                </tr>
+                            <tr>
+                              <td rowspan="3">Windows</td>
+                              <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/install/2.2.2.0/android-studio-bundle-145.3360264-windows.exe">android-studio-bundle-145.3360264-windows.exe</a><br>(推荐)
+                              </td>
+                              <td>1641 MB</td>
+                              <td>d879e4bf8cd2530dfa6cc7e176d72bb8dfd37b41</td>
+                              <td rowspan="6"><a href="http://ww2.sinaimg.cn/large/006y8lVagw1f8z1e9h9bnj312p0ie0vk.jpg">查看</a></td>
+                            </tr>
+                            <tr>
+                              <td align="left"><a href="https://dl.google.com/dl/android/studio/install/2.2.2.0/android-studio-ide-145.3360264-windows.exe">android-studio-ide-145.3360264-windows.exe</a><br>(不含SDK Tools)
+                              </td>
+                              <td>423 MB</td>
+                              <td>54c65afe143e87ef40decc720854a9c1f30417d3</td>
+                            </tr>
+                            <tr>
+                              <td align="left"><a href="https://dl.google.com/dl/android/studio/ide-zips/2.2.2.0/android-studio-ide-145.3360264-windows.zip">android-studio-ide-145.3360264-windows.zip</a></td>
+                              <td>445 MB</td>
+                              <td>27152fb1cc2b59c0110935c6bdeb2eaa58fa955f</td>
+                            </tr>
+                            <tr>
+                              <td ><nobr>Mac OS X</nobr></td>
+                              <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/install/2.2.2.0/android-studio-ide-145.3360264-mac.dmg">android-studio-ide-145.3360264-mac.dmg</a>
+                              </td>
+                              <td>440 MB</td>
+                              <td>2e89fed3601e5bd19112c29c172cb29be3b34f8e</td>
+                            </tr>
+                            <tr>
+                              <td>Linux</td>
+                              <td align="left">
+                                        <a href="https://dl.google.com/dl/android/studio/ide-zips/2.2.2.0/android-studio-ide-145.3360264-linux.zip">android-studio-ide-145.3360264-linux.zip</a>
+                              </td>
+                              <td>445 MB</td>
+                              <td>fc63ca247762697c33102a78063a95f8b5ab5dea</td>
+                            </tr>
                             <!-- 2.2.1-->
                             <tr>
                               <td rowspan="6">2.2.1</td>
