Added donate info

--- a/donate.html
+++ b/donate.html
@@ -1569,10 +1569,10 @@
                                 <td>¥10.24</td>
                                 <td>sub-bucket</td>
                                 <td>¥6.66</td>
+                                <td>刘太太太太太美</td>
+                                <td>¥1</td>
                                 <td>捐赠来自微信</td>
-                                <td>¥</td>
-                                <td>捐赠来自微信</td>
-                                <td>¥</td>
+                                <td>¥10.24</td>
                             </tr>
                         </tbody>
                     </table>
