Add NDK r13b Link

--- a/index.html
+++ b/index.html
@@ -1312,6 +1312,42 @@
                             </tr>
                         </thead>
                             <tbody>
+
+                                <!-- NDK r13b -->
+                                <tr>
+                                    <td rowspan="4">NDK r13b</td>
+                                    <td>Windows 32-bit</td>
+                                    <td align="left">
+                                        <a href="https://dl.google.com/android/repository/android-ndk-r13b-windows-x86.zip">android-ndk-r13b-windows-x86.zip</a>
+                                    </td>
+                                    <td>620461544</td>
+                                    <td>4eb1288b1d4134a9d6474eb247f0448808d52408</td>
+                                    <td rowspan="4"><a href="http://ww1.sinaimg.cn/large/006y8mN6gw1f8w8h0ot7gj30ys0gqacd.jpg">查看</a></td>
+                                </tr>
+                                <tr>
+                                    <td>Windows 64-bit</td>
+                                    <td align="left">
+                                    <a href="https://dl.google.com/android/repository/android-ndk-r13b-windows-x86_64.zip">android-ndk-r13b-windows-x86_64.zip</a>
+                                    </td>
+                                    <td>681320123</td>
+                                    <td>649d306559435c244cec5881b880318bb3dee53a</td>
+                                </tr>
+                                <tr><td>Mac OS X 64-bit</td>
+                                    <td align="left">
+                                    <a href="https://dl.google.com/android/repository/android-ndk-r13b-darwin-x86_64.zip">android-ndk-r13b-darwin-x86_64.zip</a>
+                                    </td>
+                                    <td>665967997</td>
+                                    <td>71fe653a7bf5db08c3af154735b6ccbc12f0add5</td>
+                                </tr>
+                                <tr>
+                                    <td>Linux 64-bit (x86)</td>
+                                    <td align="left">
+                                        <a href="https://dl.google.com/android/repository/android-ndk-r13b-linux-x86_64.zip">android-ndk-r13b-linux-x86_64.zip</a>
+                                    </td>
+                                    <td>687311866</td>
+                                    <td>0600157c4ddf50ec15b8a037cfc474143f718fd0</td>
+                                </tr>
+                                <!-- NDK r13 -->
                                 <tr>
                                     <td rowspan="4">NDK r13</td>
                                     <td>Windows 32-bit</td>
