added donate info

--- a/donate.html
+++ b/donate.html
@@ -1577,8 +1577,8 @@
                             <tr>
                                 <td>圆</td>
                                 <td>¥6.66</td>
-                                <td></td>
-                                <td></td>
+                                <td>捐赠来自微信</td>
+                                <td>¥1</td>
                                 <td></td>
                                 <td></td>
                                 <td></td>
