add umeng analytics

--- a/donate.html
+++ b/donate.html
@@ -1687,6 +1687,11 @@
         ga('send', 'pageview');
     </script>
     <!-- End Google Analytics -->
+
+    <!-- UMeng Analytics -->
+    <script src="https://s95.cnzz.com/z_stat.php?id=1260740530&web_id=1260740530" language="JavaScript"></script>
+    <!-- End UMeng Analytics -->
+
     <!-- add target attr to all a tag -->
     <script type="text/javascript">
         //bind a click
