--- a/index.html
+++ b/index.html
@@ -4335,6 +4335,23 @@
     <script src="static/js/jquery.toTop.min.js"></script>
     <script src="static/js/google-analytics.js"></script>
     <script src="static/js/unslider.min.js"></script>
+
+    <!-- UMeng Analytics -->
+    <script src="https://s95.cnzz.com/z_stat.php?id=1260740530&web_id=1260740530" language="JavaScript"></script>
+    <!-- End UMeng Analytics -->
+
+    <!-- Google Analytics -->
+    <script>
+        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+        })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+        ga('create', 'UA-52369435-2', 'auto');
+        ga('send', 'pageview');
+    </script>
+    <!-- End Google Analytics -->
+
     <script>
         $(function(){
             // $('.unslider-fade').unslider({ animation: 'fade', autoplay: true, arrows: false, nav: false});
