Fixed table layout deranged problem

--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
                         <tbody>
                             <!-- 2.3 Preview-->
                             <tr>
-                              <td rowspan="6">2.3 Preview</td>
+                              <td rowspan="5">2.3 Preview</td>
                                 </tr>
                             <tr>
                               <td rowspan="2">Windows</td>
@@ -301,7 +301,7 @@
                               </td>
                               <td>408.4 MB</td>
                               <td>952d48f74a9160d594503b3b29819b9c23232b0c</td>
-                              <td rowspan="4"><a href="http://ww2.sinaimg.cn/large/006y8mN6gw1f9plk43y83j30qn0kg798.jpg">查看</a></td>
+                              <td rowspan="5"><a href="http://ww2.sinaimg.cn/large/006y8mN6gw1f9plk43y83j30qn0kg798.jpg">查看</a></td>
                             </tr>
                             <tr>
                               <td align="left"><a href="https://dl.google.com/dl/android/studio/ide-zips/2.3.0.0/android-studio-ide-162.3454121-windows32.zip">android-studio-ide-162.3454121-windows32.zip</a>
@@ -325,14 +325,13 @@
                               <td>408.3 MB</td>
                               <td>6767862b34d8b837d7693ce6165dc55d0ff9676d</td>
                             </tr>
+
                             <!-- 2.2.2-->
-                            <tr>
-                              <td rowspan="6">2.2.2</td>
-                            </tr>
+                            <tr><td rowspan="6">2.2.2</td></tr>
                             <tr>
                               <td rowspan="3">Windows</td>
                               <td align="left">
-                                    <a href="https://dl.google.com/dl/android/studio/install/2.3.0.0/android-studio-bundl6214454121264-windows.exe">android-studio-bundle-145.3360264-windows.exe</a><br>(推荐)
+                                    <a href="https://dl.google.com/dl/android/studio/install/2.2.2.0/android-studio-bundle-145.3360264-windows.exe">android-studio-bundle-145.3360264-windows.exe</a><br>(推荐)
                               </td>
                               <td>1641 MB</td>
                               <td>d879e4bf8cd2530dfa6cc7e176d72bb8dfd37b41</td>
