Added donate info

--- a/donate.html
+++ b/donate.html
@@ -1584,6 +1584,16 @@
                                 <td>默阳</td>
                                 <td>¥16.8</td>
                             </tr>
+                            <tr>
+                                <td>Xman</td>
+                                <td>¥2</td>
+                                <td>照哥</td>
+                                <td>¥1</td>
+                                <td>俊卿</td>
+                                <td>¥100</td>
+                                <td></td>
+                                <td></td>
+                            </tr>
                         </tbody>
                     </table>
                 </div>
